<resources>
    <string name="app_name">MyPhotoView</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="local">本地图片</string>
    <string name="intent">网络图片</string>
    <string name="choose">全选</string>
    <string name="list">列表</string>
    <string name="path">路径</string>
    <string name="total">总共多少张图片</string>
    <string name="loading">加载中........</string>
    <string name="none">无图片</string>
    <string name="save">保存</string>

</resources>
