<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef">

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/top_margin">
        <TextView
            android:id="@+id/local_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/bottom_text_size"
            android:text="@string/local"/>
        <TextView
            android:id="@+id/intent_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/bottom_text_size"
            android:layout_marginLeft="@dimen/title_margin"
            android:text="@string/intent"/>
        <TextView
            android:id="@+id/list_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/bottom_text_size"
            android:layout_marginLeft="@dimen/size_100"
            android:text="@string/list"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_below="@id/linearlayout"/>
    <RelativeLayout
        android:id="@+id/bottom_statubar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#efefef"
        android:paddingTop="@dimen/top_margin"
        android:paddingBottom="@dimen/top_margin"
        android:visibility="gone"
        >

        <Button
            android:id="@+id/choose"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/choose"
            android:background="@drawable/button_selector"
            android:layout_marginRight="200dp"
            android:layout_alignParentRight="true"
            />

        <Button
            android:id="@+id/delete_all"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginRight="@dimen/title_margin"
            android:background="@drawable/button_selector"
            android:layout_alignParentRight="true"
            android:text="@string/delete" />

    </RelativeLayout>

</RelativeLayout>